# ecgj6

./: .gitignore  .gitmodules  CMakeLists.txt
scripts/cmake/: raygui.cmake  raylib.cmake  rxcpp.cmake
src/: common.hpp  game.cpp  game.hpp  gamestate.hpp  gamestatics.cpp  gamestatics.hpp  guiutils.hpp  main.cpp  source.cmake
src/core/: entity.cpp  entity.hpp  state.hpp  timer.cpp  timer.hpp
src/entities/: plant.cpp  plant.hpp  plantgrowthstate.hpp  player.cpp  player.hpp
src/states/: gamestate.cpp  gamestate.hpp  menustate.cpp  menustate.hpp
